added db and pooling

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,16 @@ ENVIRONMENT=development
 ALLOWED_ORIGINS=*
 
 # Database
-DATABASE_URL=
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=mcqadmin
+DB_PASSWORD=mcqpass123
+DB_NAME=mcqdb
+
+# Database Connection Pool
+DB_MAX_IDLE_CONNS=10
+DB_MAX_OPEN_CONNS=100
+DB_MAX_LIFETIME=60
 
 # JWT
 JWT_SECRET=your-secret-key-change-in-production
